--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,35 +12,40 @@
     />
   </head>
   <body>
-    <nav id="navbar">
-      <div class="nav__form">
-        <p>
-          <span id="region">Region: </span>North America |
-          <a href="#">Europe</a>
-        </p>
-        <form action="" id="nav__form">
-          <span id="login">Login</span>
-          <input type="text" />
-          <input type="password" />
-          <button class="button">
-            <span class="material-symbols-outlined"> chevron_right </span>
-          </button>
-          <a href="#">Forgot your password?</a>
-        </form>
-      </div>
-      <div class="nav__list">
-        <ul>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Learning Center</a></li>
-          <li><a href="#">Ladders</a></li>
-          <li><a href="#">Forums</a></li>
-          <li><a href="#">Community</a></li>
-          <li><a href="#">Media</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Support</a></li>
-        </ul>
-      </div>
-    </nav>
+      <main id="container">
+        
+        <header class="header">
+          <div class="riot-logo">
+            <img src="assets/riotgames-logo.png" alt="">
+          </div>
+          <form action="">
+            <label for="username">
+              <input type="text" name="username" id="username">
+            </label>
+            <label for="username">
+              <input type="text" name="username" id="username">
+            </label>
+            <input type="submit" value="register">
+          </form>
+        </header>
+        <section class="hero">
+          
+        </section>
+        <nav id="navbar">
+          <div class="logo">
+            <a href="#inicio"><img src="assets/Logo.png" alt="">
+            </a>
+          </div>
+          <ul class="list-navbar">
+            <li><a href="#">Jugar</a></li>
+            <li><a href="#">Tienda</a></li>
+            <li><a href="#">Campeones</a></li>
+            <li><a href="#">Modalidad de Juego</a></li>
+            <li><a href="#">Configuración</a></li>
+          </ul>
+        </nav>
+
+      </main>
 
     <div class="hidden">
       <!-- Iron Icon -->
