--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="#inicio"><img src="assets/Logo.png" alt="" /> </a>
         </div>
         <ul class="list-navbar">
-          <li><a href="#">Jugar</a></li>
+          <li><a href="#Inicio">Jugar</a></li>
           <li><a href="#">Tienda</a></li>
           <li><a href="#">Campeones</a></li>
           <li><a href="#">Modalidad de Juego</a></li>
@@ -45,7 +45,14 @@
         </ul>
       </nav>
 
+      <div class="champion-select">
+        .
+      </div>
 
+
+      </section>
+      <section class="play section">
+        <div class="contain-ranks"></div>
       </section>
     </main>
 
