--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="#inicio"><img src="assets/Logo.png" alt="" /> </a>
         </div>
         <ul class="list-navbar">
-          <li><a href="#Inicio">Jugar</a></li>
+          <li><a href="#inicio">Jugar</a></li>
           <li><a href="#">Tienda</a></li>
           <li><a href="#">Campeones</a></li>
           <li><a href="#">Modalidad de Juego</a></li>
@@ -45,14 +45,33 @@
         </ul>
       </nav>
 
-      <div class="champion-select">
-        .
-      </div>
-
-
+      <section class="play" id="playBground">
+        <div class="map">
+          <div class="title opt">
+            <h1>INICIO</h1>
+          </div>
+          <h2>Casa</h2>
+          <h2>Tienda</h2>
+          <h2>Batalla</h2>
+          <div class="tienda opt">
+            <span class="button-opt">
+              <img src="assets/Shop.png" alt="">
+            </span>
+          </div>
+          <div class="casa opt">
+            <span class="button-opt">
+              <img src="assets/Casa.png" alt="">
+            </span>
+          </div>
+          <div class="battle opt">
+            <span class="button-opt">
+              <img src="assets/Battle.png" alt="">
+            </span>
+          </div>
+        </div>
       </section>
-      <section class="play section">
-        <div class="contain-ranks"></div>
+
+
       </section>
     </main>
 
