--- a/index.html
+++ b/index.html
@@ -73,17 +73,47 @@
             <span class="cargando"></span>
           </div>
           <span class="alcancia">
-            <span class="material-symbols-outlined">
-              monetization_on
-              </span>
-              <span id="monedas"></span>
+            <span class="material-symbols-outlined"> monetization_on </span>
+            <span id="monedas"></span>
           </span>
-          
 
           <!-- Sesion para Tienda -->
           <div class="tiendaDisplay">
-            <span class="bienvenido"></span>
-            
+            <span class="alcancia">
+              <span class="material-symbols-outlined"> monetization_on </span>
+              <span id="monedasTienda"></span>
+            </span>
+            <button class="goBack">
+              <span class="material-symbols-outlined"> arrow_back </span>
+            </button>
+            <span class="bienvenido">
+              <span class="center-mid"></span>
+            </span>
+            <div class="cards">
+              <img src="assets/lux.png" alt="lux" />
+              <span class="characteristic"
+                >Magia de control a larga distancia y habilidades de luz. Es
+                versátil en roles de soporte y medio.</span
+              >
+              <span class="gender">Femenino</span>
+              <div class="buttons">
+                <span class="precio">100.00$</span>
+                <button class="toBuy">Comprar</button>
+              </div>
+            </div>
+            <div class="cards">
+              <img src="assets/ashe.png" alt="lux" />
+              <span class="characteristic"
+                >Tiradora de largo alcance. Sus habilidades ralentizan a los
+                enemigos.
+                <br />
+              </span>
+              <span class="gender">Femenino</span>
+              <div class="buttons">
+                <span class="precio">120.00$</span>
+                <button class="toBuy">Comprar</button>
+              </div>
+            </div>
           </div>
         </section>
       </section>
