arreglo en el display del monedero y funcion toBuy.

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
           </div>
           <span class="alcancia">
             <span class="material-symbols-outlined"> monetization_on </span>
-            <span id="monedas"></span>
+            <span id="monedas">100</span>
           </span>
 
           <!-- Sesion para Tienda -->
           <div class="tiendaDisplay">
             <span class="alcancia">
               <span class="material-symbols-outlined"> monetization_on </span>
-              <span id="monedasTienda"></span>
+              <span id="monedasTienda">100</span>
             </span>
             <button class="goBack">
               <span class="material-symbols-outlined"> arrow_back </span>
@@ -98,7 +98,7 @@
               <span class="gender">Femenino</span>
               <div class="buttons">
                 <span class="precio">100.00$</span>
-                <button class="toBuy">Comprar</button>
+                <button class="toBuy" id="lux">Comprar</button>
               </div>
             </div>
             <div class="cards">
@@ -111,7 +111,7 @@
               <span class="gender">Femenino</span>
               <div class="buttons">
                 <span class="precio">120.00$</span>
-                <button class="toBuy">Comprar</button>
+                <button class="toBuy" id="ashe">Comprar</button>
               </div>
             </div>
           </div>
