nueva carta añadida : missfortune

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
             <li><a href="#">Configuración</a></li>
           </ul>
         </nav>
-
+        <div class="maintain-services">
+          <div class="main-title">
+            <span class="material-symbols-outlined">
+              smart_toy
+              </span>
+              <h1>Estamos en Mantenimiento!</h1>
+          </div>
+            <p>Disculpa las molestias. Estamos trabajando en mejorar nuestro sitio web.</p>
+        </div>
         <section class="play" id="playBground">
           <div class="map">
             <div class="title opt">
@@ -89,6 +97,7 @@
             <span class="bienvenido">
               <span class="center-mid"></span>
             </span>
+
             <div class="cards">
               <img src="assets/lux.png" alt="lux" />
               <span class="characteristic"
@@ -101,8 +110,9 @@
                 <button class="toBuy" id="lux">Comprar</button>
               </div>
             </div>
+
             <div class="cards">
-              <img src="assets/ashe.png" alt="lux" />
+              <img src="assets/ashe.png" alt="ashe" />
               <span class="characteristic"
                 >Tiradora de largo alcance. Sus habilidades ralentizan a los
                 enemigos.
@@ -110,10 +120,25 @@
               </span>
               <span class="gender">Femenino</span>
               <div class="buttons">
-                <span class="precio">120.00$</span>
+                <span class="precio">150.00$</span>
                 <button class="toBuy" id="ashe">Comprar</button>
               </div>
             </div>
+
+            <div class="cards">
+              <img src="assets/missfortune.png" alt="miss" />
+              <span class="characteristic"
+                >Tiradora de largo alcance. Sus habilidades ralentizan a los
+                enemigos.
+                <br />
+              </span>
+              <span class="gender">Femenino</span>
+              <div class="buttons">
+                <span class="precio">250.00$</span>
+                <button class="toBuy" id="miss">Comprar</button>
+              </div>
+            </div>
+
           </div>
         </section>
       </section>
