Nueva Funcion en Tienda Solo Permite Comprar 1 vez

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>League of Legends</title>
+    <title>Battle of Legends</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="assets/icon.ico" type="image/x-icon" />
     <link
