Arreglos, y nuevas funcionalidades a upgrade-sell.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <span class="center-mid"></span>
               </span>
 
-              <div class="cards">
+              <div class="cards" id="cartaLux">
                 <img src="assets/lux.png" alt="lux" />
                 <span class="characteristic"
                   >Magia de control a larga distancia y habilidades de luz. Es
@@ -115,7 +115,7 @@
                 </div>
               </div>
 
-              <div class="cards">
+              <div class="cards" id="cartaAshe">
                 <img src="assets/ashe.png" alt="ashe" />
                 <span class="characteristic"
                   >Tiradora de largo alcance. Sus habilidades ralentizan a los
@@ -129,7 +129,7 @@
                 </div>
               </div>
 
-              <div class="cards">
+              <div class="cards" id="cartaMiss">
                 <img src="assets/missfortune.png" alt="miss" />
                 <span class="characteristic"
                   >Tiradora de largo alcance. Sus habilidades ralentizan a los
