Animacion de entrada al mejorar un personajes.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,12 @@
               <button class="goBack-casa back">
                 <span class="material-symbols-outlined"> arrow_back </span>
               </button>
-              <div class="cards__container"></div>
+              <div class="cards__container">
+                <div class="messageDisplay">
+                  <span class="mensajeDisplayPositive message hidden"></span>
+                  <span class="mensajeDisplayNegative message hidden"></span>
+                </div>
+              </div>
             </div>
           </div>
         </section>
