Señales al comprar un personaje.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
             <!-- Sesion para Tienda -->
             <div class="tiendaDisplay">
+              <span class="mensajeDeVacio hidden">El hogar se encuentra Vacio</span>
               <span class="alcancia">
                 <span class="material-symbols-outlined"> monetization_on </span>
                 <span id="monedasTienda">100</span>
@@ -101,7 +102,9 @@
               <span class="bienvenido">
                 <span class="center-mid"></span>
               </span>
-
+              <div class="messageDisplay">
+                <span class="mensajeDisplayNegative message hidden"></span>
+              </div>
               <div class="cards" id="cartaLux">
                 <img src="assets/lux.png" alt="lux" />
                 <span class="characteristic"
@@ -152,7 +155,6 @@
               <div class="cards__container">
                 <div class="messageDisplay">
                   <span class="mensajeDisplayPositive message hidden"></span>
-                  <span class="mensajeDisplayNegative message hidden"></span>
                 </div>
               </div>
             </div>
