mostrar batalla añadida.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 
             <!-- Sesion para Tienda -->
             <div class="tiendaDisplay">
-              <span class="mensajeDeVacio hidden">El hogar se encuentra Vacio</span>
+              <span class="mensajeDeVacio hidden"
+                >El hogar se encuentra Vacio</span
+              >
               <span class="alcancia">
                 <span class="material-symbols-outlined"> monetization_on </span>
                 <span id="monedasTienda">100</span>
@@ -157,6 +159,12 @@
                   <span class="mensajeDisplayPositive message hidden"></span>
                 </div>
               </div>
+            </div>
+
+            <div id="sectionBatalla">
+              <button class="goBack-batalla back">
+                <span class="material-symbols-outlined"> arrow_back </span>
+              </button>
             </div>
           </div>
         </section>
