Arreglo del display bienvenido en menu.

--- a/index.html
+++ b/index.html
@@ -112,13 +112,41 @@
                 </div>
               </div>
 
+              <div class="languagePanel">
+                <h1>Idioma</h1>
+                <p class="lang-text">Español</p>
+              </div>
 
               <div class="buttons-section-menu-form">
                 <button id="discard-changes">Descartar Cambios</button>
                 <button id="save-changes">Guardar Cambios</button>
               </div>
+            </div>
+          </div>
+          <!-- Luego de presionar en jugar se mostrara lainterfaz para ingresar un nombre de usuario -->
+          <div class="userName-interface">
+            <div class="userName-form">
+              <h1 class="userName-title">Ingrese su nombre de Usuario:</h1>
+
+              <div class="userName-form-submit">
+                <input
+                  type="username"
+                  class="userName-input"
+                  id="userNameInput"
+                  placeholder="Heart23"
+                />
+                <button class="userName-form-button" id="submitUserNameButton">
+                  <span class="material-symbols-outlined">
+                    keyboard_arrow_right
+                  </span>
+                </button>
+              </div>
 
             </div>
+          </div>
+          <!-- dar la bienvenida al usuario -->
+          <div class="mensajeToUser">
+            <h1 class="mensajeDisplay"></h1>
           </div>
 
           <!-- Map es considerado como el menu principal -->
