--- a/index.html
+++ b/index.html
@@ -258,7 +258,16 @@
               <button class="goBack-batalla back">
                 <span class="material-symbols-outlined"> arrow_back </span>
               </button>
+
+                <div class="lista-de-clasificados">
+                  <h1 class="clasificado-text">Clasificación</h1>
+                  <span class="mostrarNombreUsuario"></span>
+                </div>
+
+              <button class="startToPlay">Jugar</button>
             </div>
+
+
           </div>
         </section>
       </section>
