--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
               <button class="goBack-batalla back">
                 <span class="material-symbols-outlined"> arrow_back </span>
               </button>
+
+              <!-- Anadir los siguientes parametros para el juego -->
             </div>
           </div>
         </section>
