Subida de los rangos.

--- a/index.html
+++ b/index.html
@@ -264,7 +264,14 @@
                   <span class="mostrarNombreUsuario"></span>
                 </div>
 
-              <button class="startToPlay">Jugar</button>
+                <button class="startToPlay">Jugar</button>
+
+                <!-- A;adir rangos segun puntaje de trofeos -->
+                <div class="mostrar-rango">
+                  <img src="" alt="" class="rango-img">
+                  <span class="rango-text"></span>
+                </div>
+
             </div>
 
 
@@ -272,89 +279,6 @@
         </section>
       </section>
     </main>
-
-    <div class="hidden">
-      <!-- Iron Icon -->
-      <a href="https://emoji.gg/emoji/7574-iron"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/7574-iron.png"
-          width="64px"
-          height="64px"
-          alt="Iron"
-      /></a>
-
-      <!-- Bronze -->
-      <a href="https://emoji.gg/emoji/1184-bronze"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/1184-bronze.png"
-          width="64px"
-          height="64px"
-          alt="Bronze"
-      /></a>
-
-      <!-- Silver -->
-      <a href="https://emoji.gg/emoji/7455-silver"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/7455-silver.png"
-          width="64px"
-          height="64px"
-          alt="Silver"
-      /></a>
-
-      <!-- Gold -->
-      <a href="https://emoji.gg/emoji/1053-gold"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/1053-gold.png"
-          width="64px"
-          height="64px"
-          alt="Gold"
-      /></a>
-
-      <!-- Platinum -->
-      <a href="https://emoji.gg/emoji/3978-platinum"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/3978-platinum.png"
-          width="64px"
-          height="64px"
-          alt="Platinum"
-      /></a>
-
-      <!-- Diamond -->
-      <a href="https://emoji.gg/emoji/1053-diamond"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/1053-diamond.png"
-          width="64px"
-          height="64px"
-          alt="Diamond"
-      /></a>
-
-      <!-- Master -->
-      <a href="https://emoji.gg/emoji/9231-master"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/9231-master.png"
-          width="64px"
-          height="64px"
-          alt="Master"
-      /></a>
-
-      <!-- GrandMaster -->
-      <a href="https://emoji.gg/emoji/9476-grandmaster"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/9476-grandmaster.png"
-          width="64px"
-          height="64px"
-          alt="Grandmaster"
-      /></a>
-
-      <!-- Challenger -->
-      <a href="https://emoji.gg/emoji/9476-challenger"
-        ><img
-          src="https://cdn3.emoji.gg/emojis/9476-challenger.png"
-          width="64px"
-          height="64px"
-          alt="Challenger"
-      /></a>
-    </div>
 
     <script src="script.js"></script>
   </body>
