Creacion de la seleccion de campeones

--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@
                   <span class="rango-text"></span>
                 </div>
 
+                <div class="contenedor-de-casillas">
+                  <span class="mostrarComoVacio">La casilla se encuentra vacía</span>
+                </div>
+              
             </div>
 
 
