subida de botones en casillero en proceso.

--- a/index.html
+++ b/index.html
@@ -272,7 +272,23 @@
                   <span class="rango-text"></span>
                 </div>
 
-                <div class="contenedor-de-casillas">
+                <div class="casillero">
+                  <div class="encabezadoCasillero">
+                    <h1>Selecciona Tus Campeones</h1>
+                  </div>
+
+                  <div class="contenedor-de-casillas">
+                  </div>
+
+                  <div class="centro-de-botones-casillero">
+                    <button class="reestablecerTablero">Reestablecer Tablero</button>
+                    <button class="seleccionarTodo">Seleccionar Todo</button>
+                    <button class="expandirCasillero">
+                      <!-- Ingresar un icono de flecha arriba -->
+                      hola
+                    </button>
+                  </div>
+
                 </div>
               
             </div>
