Arreglo de los botones de expandir y de seleccion.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
                   </span>
                 </button>
               </div>
-
             </div>
           </div>
           <!-- dar la bienvenida al usuario -->
@@ -259,41 +258,42 @@
                 <span class="material-symbols-outlined"> arrow_back </span>
               </button>
 
-                <div class="lista-de-clasificados">
-                  <h1 class="clasificado-text">Clasificación</h1>
-                  <span class="mostrarNombreUsuario"></span>
+              <div class="lista-de-clasificados">
+                <h1 class="clasificado-text">Clasificación</h1>
+                <span class="mostrarNombreUsuario"></span>
+              </div>
+
+              <button class="startToPlay">Jugar</button>
+
+              <!-- A;adir rangos segun puntaje de trofeos -->
+              <div class="mostrar-rango">
+                <img src="" alt="" class="rango-img" />
+                <span class="rango-text"></span>
+              </div>
+
+              <div class="casillero">
+                <div class="encabezadoCasillero">
+                  <h1>Selecciona Tus Campeones</h1>
                 </div>
 
-                <button class="startToPlay">Jugar</button>
+                <div class="contenedor-de-casillas"></div>
 
-                <!-- A;adir rangos segun puntaje de trofeos -->
-                <div class="mostrar-rango">
-                  <img src="" alt="" class="rango-img">
-                  <span class="rango-text"></span>
+                <div class="centro-de-botones-casillero">
+                  <button class="reestablecerTablero">
+                    Reestablecer Tablero
+                  </button>
+                  <button class="seleccionarTodo">Seleccionar Todo</button>
+                  <button class="expandirCasillero">
+                    <!-- Ingresar un icono de flecha arriba -->
+                    <div class="expandIcon">
+                      <span class="material-symbols-outlined">
+                        expand_more
+                      </span>
+                    </div>
+                  </button>
                 </div>
-
-                <div class="casillero">
-                  <div class="encabezadoCasillero">
-                    <h1>Selecciona Tus Campeones</h1>
-                  </div>
-
-                  <div class="contenedor-de-casillas">
-                  </div>
-
-                  <div class="centro-de-botones-casillero">
-                    <button class="reestablecerTablero">Reestablecer Tablero</button>
-                    <button class="seleccionarTodo">Seleccionar Todo</button>
-                    <button class="expandirCasillero">
-                      <!-- Ingresar un icono de flecha arriba -->
-                      hola
-                    </button>
-                  </div>
-
-                </div>
-              
+              </div>
             </div>
-
-
           </div>
         </section>
       </section>
