Creacion de entrada a la barra de carga.

--- a/index.html
+++ b/index.html
@@ -292,8 +292,19 @@
                     </div>
                   </button>
                 </div>
+
+              </div>
+
+              <!-- Mostrar Busqueda de combates -->
+              
+            </div>
+            <div class="mostrarEstadioDeCombate">
+              <div class="contenedor-de-barra-de-carga">
+                <h1>Encontrando Rival</h1>
+              <span class="barraDeCargaEnCombate"></span>
               </div>
             </div>
+
           </div>
         </section>
       </section>
