Creacion de selector de modo.

--- a/index.html
+++ b/index.html
@@ -263,6 +263,18 @@
                 <span class="mostrarNombreUsuario"></span>
               </div>
 
+              <!-- Section para botones de modo de juego y jugar -->
+              <div class="select-mode-container">
+                <button class="selectGameMode">
+                  Selección Automática
+                  <span class="material-symbols-outlined"> sync </span>
+                </button>
+                <div class="elegir-modo">
+                  <button id="Modo - Clasificatoria" class="mode-button">Clasificatoria</button>
+                  <button id="Modo - Normal" class="mode-button">Normal</button>
+                  <button id="Modo - Historia" class="mode-button">Modo Historia</button>
+                </div>
+              </div>
               <button class="startToPlay">Jugar</button>
 
               <!-- A;adir rangos segun puntaje de trofeos -->
