Subida de panel de niveles.

--- a/index.html
+++ b/index.html
@@ -265,14 +265,15 @@
 
               <!-- Section para botones de modo de juego y jugar -->
               <div class="select-mode-container">
-                <button class="selectGameMode">
-                  Selección Automática
-                  <span class="material-symbols-outlined"> sync </span>
-                </button>
+                <button class="selectGameMode"></button>
                 <div class="elegir-modo">
-                  <button id="Modo - Clasificatoria" class="mode-button">Clasificatoria</button>
+                  <button id="Modo - Clasificatoria" class="mode-button">
+                    Clasificatoria
+                  </button>
                   <button id="Modo - Normal" class="mode-button">Normal</button>
-                  <button id="Modo - Historia" class="mode-button">Modo Historia</button>
+                  <button id="Modo - Historia" class="mode-button">
+                    Modo Historia
+                  </button>
                 </div>
               </div>
               <button class="startToPlay">Jugar</button>
@@ -304,19 +305,21 @@
                     </div>
                   </button>
                 </div>
-
               </div>
 
               <!-- Mostrar Busqueda de combates -->
-              
             </div>
             <div class="mostrarEstadioDeCombate">
               <div class="contenedor-de-barra-de-carga">
                 <h1>Encontrando Rival</h1>
-              <span class="barraDeCargaEnCombate"></span>
+                <span class="barraDeCargaEnCombate"></span>
               </div>
-            </div>
 
+              <!-- Boton de Salida Hacia el menu de Batalla -->
+              <button class="goBack-PanelDeBatalla back">
+                <span class="material-symbols-outlined"> arrow_back </span>
+              </button>
+            </div>
           </div>
         </section>
       </section>
