Subida de encontrado de enemigos.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
               <!-- Mostrar Busqueda de combates -->
             </div>
-            <div class="mostrarEstadioDeCombate">
+            <div class="mostrarPanelDeCombate">
               <div class="contenedor-de-barra-de-carga">
                 <h1>Encontrando Rival</h1>
                 <span class="barraDeCargaEnCombate"></span>
@@ -320,6 +320,9 @@
                 <span class="material-symbols-outlined"> arrow_back </span>
               </button>
             </div>
+
+            <div class="mostrarEstadioDeCombate"></div>
+
           </div>
         </section>
       </section>
