asignacion de enemigo.

--- a/index.html
+++ b/index.html
@@ -321,7 +321,10 @@
               </button>
             </div>
 
-            <div class="mostrarEstadioDeCombate"></div>
+            <div class="mostrarEstadioDeCombate">
+              <div class="estadioUsuario"></div>
+              <div class="estadioEnemigo"></div>
+            </div>
 
           </div>
         </section>
