Se soluciona el ataque en mostrado de Vida.

--- a/index.html
+++ b/index.html
@@ -323,7 +323,16 @@
 
             <div class="mostrarEstadioDeCombate">
               <div class="estadioUsuario"></div>
-              <div class="estadioEnemigo"></div>
+              <div class="estadioEnemigo">
+                <div class="contenedorDelNivelActualDeMazmorra">
+                  <h2>Nivel Actual de Mazmorra:</h2>
+                  <h1 class="nivelActual-modo-historia"></h1>
+                </div>
+                <div class="statsDelEnemigo">
+                  <div class="barraDeVidaDelEnemigo"></div>
+                  <div class="barraDeManaDelEnemigo"></div>
+                </div>
+              </div>
             </div>
 
           </div>
